--- a/Project_Folder/ProjectDesignSell.html
+++ b/Project_Folder/ProjectDesignSell.html
@@ -137,7 +137,7 @@
     </ul>
 
     <div class="bg-image">
-        <div class="img1"><img src="C:\Users\shrsharma\Desktop\card1.jpg" width="100%"> </div>
+        <div class="img1"><img src="C:\Users\shrsharma\Documents\card1.jpg" width="100%"> </div>
         <div class="main-text">
           <h1 style="font-size:40px">Welcome to TemPlate Space</h1>
           <p> <button class="bttn">Browse Templates</button></p>
@@ -146,7 +146,7 @@
 <br><br><br><br>
 <div class="row">
     <div class="card">
-        <img src="C:\Users\shrsharma\Desktop\temp1.jpg" alt="Avatar" style="width:100% ; height: 200px;">
+        <img src="C:\Users\shrsharma\Documents\temp1.jpg" alt="Avatar" style="width:100% ; height: 200px;">
         <div class="container">
           <h4><b>Simple Multipurpose Template</b></h4> 
           <p> <button>Preview</button> <button>DownLoad</button> <button>Buy</button>  </p> 
@@ -154,7 +154,7 @@
       </div>
 
       <div class="card">
-        <img src="C:\Users\shrsharma\Desktop\temp4.jpg" alt="Avatar" style="width:100% ; height: 200px;">
+        <img src="C:\Users\shrsharma\Documents\temp4.jpg" alt="Avatar" style="width:100% ; height: 200px;">
         <div class="container">
           <h4><b>Photography Website Template</b></h4> 
           <p> <button>Preview</button> <button>DownLoad</button> <button>Buy</button> </p> 
@@ -162,7 +162,7 @@
       </div>
 
       <div class="card">
-        <img src="C:\Users\shrsharma\Desktop\temp3.jpg" alt="Avatar" style="width:100% ; height: 200px;">
+        <img src="C:\Users\shrsharma\Documents\temp3.jpg" alt="Avatar" style="width:100% ; height: 200px;">
         <div class="container">
           <h4><b>Restaurant Template</b></h4> 
           <p> <button>Preview</button> <button>DownLoad</button> <button>Buy</button> </p> 
@@ -172,7 +172,7 @@
       <br><br>
 
       <div class="card">
-        <img src="C:\Users\shrsharma\Desktop\temp 5.jpg" alt="Avatar" style="width:100% ; height: 200px;">
+        <img src="C:\Users\shrsharma\Documents\temp 5.jpg" alt="Avatar" style="width:100% ; height: 200px;">
         <div class="container">
           <h4><b>Gaming Wesite Template</b></h4> 
           <p> <button>Preview</button> <button>DownLoad</button> <button>Buy</button>  </p> 
@@ -180,7 +180,7 @@
       </div>
 
       <div class="card">
-        <img src="C:\Users\shrsharma\Desktop\hotel1.jpg" alt="Avatar" style="width:100% ; height: 200px;">
+        <img src="C:\Users\shrsharma\Documents\hotel1.jpg" alt="Avatar" style="width:100% ; height: 200px;">
         <div class="container">
           <h4><b>Hotel Website Template</b></h4> 
           <p> <button>Preview</button> <button>DownLoad</button> <button>Buy</button> </p> 
@@ -188,7 +188,7 @@
       </div>
 
       <div class="card">
-        <img src="C:\Users\shrsharma\Desktop\temp6.jfif" alt="Avatar" style="width:100% ; height: 200px;">
+        <img src="C:\Users\shrsharma\Documents\temp6.jfif" alt="Avatar" style="width:100% ; height: 200px;">
         <div class="container">
           <h4><b>Medical Website Template</b></h4> 
           <p> <button>Preview</button> <button>DownLoad</button> <button>Buy</button> </p> 
