--- a/Restaurant_Project/index.html
+++ b/Restaurant_Project/index.html
@@ -204,7 +204,7 @@
 
 <div class="gallery">
     <br><br>
-    <h3 style="font-family: Brush Script MT, Brush Script Std, cursive; margin-left: 30px;"> our Gallery </h3>
+    <h3 style="font-family: Brush Script MT, Brush Script Std, cursive; margin-left: 30px;"> our Bests </h3>
     <hr style="width:20%; margin-left:10px; border-width: 3px;">
     <img style=" width: 100%; height: 600px;" src="https://irp-cdn.multiscreensite.com/b0e4701c/dms3rep/multi/food-grid-img.jpg">
 </div>
