--- a/ServiceWebsite/finance.html
+++ b/ServiceWebsite/finance.html
@@ -147,7 +147,7 @@
                 <script>
                     function myFunction() 
                     {
-                        alert("I am an alert box!");
+                        alert("Your order has been submitted, Thankyou!");
                     }
                 </script>
 
