--- a/ServiceWebsite/finance.html
+++ b/ServiceWebsite/finance.html
@@ -116,7 +116,7 @@
                         <p id="demo5" style="color: whitesmoke;"></p>
                         <p id="demo6" style="color: whitesmoke;"></p>
 
-                        <button type="submit" class="btn btn-primary" style="background-color: #333; border-color: #333;" onclick="document.getElementById('demo').innerHTML=toAMT(m,n,o,p,q,r)">Total</button>
+                        <a href="#"  style= " color: whitesmoke;" onclick="document.getElementById('demo').innerHTML=toAMT(m,n,o,p,q,r)">Total</a>
             
                         <br>
                         <br>
